--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,6 @@
 # This is a basic workflow to help you get started with Actions
-CI: false
+env:
+  CI: false
 
 name: React Context API Shopping Cart
 
